[gd_scene load_steps=7 format=3 uid="uid://cbed5oia2f0fn"]

[ext_resource type="Texture2D" uid="uid://dw7h13fqcn3s5" path="res://assets/temp/Starfields/Starfield_01-512x512.png" id="1_vjb58"]
[ext_resource type="Script" uid="uid://du4533215l2ao" path="res://scripts/mainmenu.gd" id="2_4ytvr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3eks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v86rl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13sgg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6lef"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vjb58")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.66
anchor_top = 0.549
anchor_right = 0.868
anchor_bottom = 0.945
offset_left = -505.20007
offset_top = -173.92004
offset_right = -504.56006
offset_bottom = -131.59998
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4ytvr")

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3eks")
text = "PLAY"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_v86rl")
text = "SETTINGS"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_13sgg")
text = "CREDITS"
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_i6lef")
text = "EXIT"
flat = true

[connection signal="focus_entered" from="VBoxContainer/play" to="VBoxContainer" method="_on_play_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/play" to="VBoxContainer" method="_on_play_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/play" to="VBoxContainer" method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/play" to="VBoxContainer" method="_on_play_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/play" to="VBoxContainer" method="_on_play_pressed"]
[connection signal="focus_entered" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/settings" to="VBoxContainer" method="settings_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_pressed"]
[connection signal="focus_entered" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_pressed"]
[connection signal="focus_entered" from="VBoxContainer/exit" to="VBoxContainer" method="_on_exit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/exit" to="VBoxContainer" method="_on_exit_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/exit" to="VBoxContainer" method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/exit" to="VBoxContainer" method="_on_exit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/exit" to="VBoxContainer" method="_on_exit_pressed"]
